--- a/templates/home.html
+++ b/templates/home.html
@@ -2,14 +2,48 @@
 <html>
 <head>
   <title> Shyam's Home</title>
+  <style>
+    h1{
+      font-size: 30px;
+      font-family:Roboto;
+      font-weight:normal;
+      color:rgb(50,50,50);
+      text-align:center;
+    }
+    #banner{
+      width:100%;
+      height:160px;
+      object-fit:cover
+    }
+    h2{
+      font-size: 32px;
+      font-family:Roboto;
+      font-weight:normal;
+      color:rgb(100,100,100);
+      text-align:center;
+    }
+    .bodytext{
+      font-family:Roboto;
+      color:rgb(100,100,100);
+    }
+    #container{
+      width:80%;
+      margin:auto;
+      overflow:hidden
+    }
+  </style>
 </head>
   <body>
+    <div id = "container">
     <h1>Personal banking</h1>
-    <img src="https://cf005087-45b8-4b3b-a394-f1569f23f128-00-1z94h9pgn8jec.pike.replit.dev/static/personal_banking.jpg" height="320" </img>
+    <img id = "banner" src="https://cf005087-45b8-4b3b-a394-f1569f23f128-00-1z94h9pgn8jec.pike.replit.dev/static/personal_banking.jpg"  </img>
     <h2>About personal banking</h2>
-    <p>Personal banking is a banking service that is tailored to the needs of individual customers. It is designed to provide personalized financial solutions and services to meet the unique requirements of each customer. Personal banking services can include a wide range of financial products and services</p>
+    <p class="bodytext">Personal banking is a banking service that is tailored to the needs of individual customers. It is designed to provide personalized financial solutions and services to meet the unique requirements of each customer. Personal banking services can include a wide range of financial products and services</p>
     <h2>Open Positions</h2>
     <h1>jobs available</h1>
-    <button>contact us</button>
+    <div style="text-align:center"> 
+      <button>contact us</button>
+      <p class="cp">Copyright,Shyam patil 2025</p>
+      </div>
   </body>
 </html>
