--- a/templates/home.html
+++ b/templates/home.html
@@ -1,49 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Shyam's Home</title>
   <style>
-    h1{
-      font-size: 30px;
-      font-family:Roboto;
-      font-weight:normal;
-      color:rgb(50,50,50);
-      text-align:center;
-    }
     #banner{
       width:100%;
       height:160px;
       object-fit:cover
     }
-    h2{
-      font-size: 32px;
-      font-family:Roboto;
-      font-weight:normal;
-      color:rgb(100,100,100);
-      text-align:center;
-    }
-    .bodytext{
-      font-family:Roboto;
-      color:rgb(100,100,100);
-    }
-    #container{
-      width:80%;
-      margin:auto;
-      overflow:hidden
-    }
   </style>
+   <title> Shyam's Home</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
   <body>
-    <div id = "container">
-    <h1>Personal banking</h1>
-    <img id = "banner" src="https://cf005087-45b8-4b3b-a394-f1569f23f128-00-1z94h9pgn8jec.pike.replit.dev/static/personal_banking.jpg"  </img>
-    <h2>About personal banking</h2>
-    <p class="bodytext">Personal banking is a banking service that is tailored to the needs of individual customers. It is designed to provide personalized financial solutions and services to meet the unique requirements of each customer. Personal banking services can include a wide range of financial products and services</p>
+    <div class = "container">
+    <h1 class = "text-center" mt-2 mb-4>{{bnktype}} banking</h1>
+    <img id = "banner" class = "img-fluid" src="https://cf005087-45b8-4b3b-a394-f1569f23f128-00-1z94h9pgn8jec.pike.replit.dev/static/personal_banking.jpg"  </img>
+    <h2 class = "text-center" mt-2 mb-4>About {{bnktype}} banking</h2>
+    <p class = "lead">{{bnktype}} banking is a banking service that is tailored to the needs of individual customers. It is designed to provide personalized financial solutions and services to meet the unique requirements of each customer. Personal banking services can include a wide range of financial products and services</p>
     <h2>Open Positions</h2>
-    <h1>jobs available</h1>
-    <div style="text-align:center"> 
-      <button>contact us</button>
-      <p class="cp">Copyright,Shyam patil 2025</p>
+    <div>
+     {%for jobs in availjobs%}
+      <div style="margin-bottom:16" >
+        <h4 style = "color:rgb(120,120,120);margin-bottom:4px">{{jobs['title']}}</h4>
+        <div><b>Location: </b>{{jobs['location']}}</div>
+        <div><b>Salary: </b>{{jobs['salary']}}</div>
+      </div>
+     {%endfor%}
+    </div>
+    <div class ="text-center"> 
+      <button type="button" class="btn btn-primary btn-lg">contact us</button>
+      <p class = mt-4 mb-4>Copyright,Shyam patil 2025</p>
       </div>
   </body>
 </html>
