added minor chnages

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
       object-fit:cover
     }
   </style>
-   <title> Shyam's Home</title>
+   <title> Shyam's Development</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <img id = "banner" class = "img-fluid" src="https://cf005087-45b8-4b3b-a394-f1569f23f128-00-1z94h9pgn8jec.pike.replit.dev/static/personal_banking.jpg"  </img>
     <h2 class = "text-center" mt-2 mb-4>About {{bnktype}} banking</h2>
     <p class = "lead">{{bnktype}} banking is a banking service that is tailored to the needs of individual customers. It is designed to provide personalized financial solutions and services to meet the unique requirements of each customer. Personal banking services can include a wide range of financial products and services</p>
-      <h2>Open Positions</h2>
+      <h2>Job Openings</h2>
        <div>
           
            {% include 'jobitem.html'%}
@@ -27,7 +27,7 @@
        </div>
       <div class = "text-center" mt-2 mb-4> 
         <button type="button" class="btn btn-primary btn-lg">contact us</button>
-        <p class = mt-4 mb-4>Copyright,Shyam patil 2025</p>
+        <p class = mt-4 mb-4>Copyright,Shyam patil @2025</p>
       </div>
   </body>
 </html>
